--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -6,8 +6,8 @@
 # These absolutely need to be on top, or they won't work consistently
 bindid = Super, Super_L, Toggle search, global, quickshell:searchToggleRelease # Toggle search
 bindid = Super, Super_R, Toggle search, global, quickshell:searchToggleRelease # [hidden] Toggle search
-bind = Super, Super_L, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || fuzzel # [hidden] Launcher (fallback)
-bind = Super, Super_R, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || fuzzel # [hidden] Launcher (fallback)
+#bind = Super, Super_L, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || fuzzel # [hidden] Launcher (fallback)
+#bind = Super, Super_R, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || fuzzel # [hidden] Launcher (fallback)
 binditn = Super, catchall, global, quickshell:searchToggleReleaseInterrupt # [hidden]
 bind = Ctrl, Super_L, global, quickshell:searchToggleReleaseInterrupt # [hidden]
 bind = Ctrl, Super_R, global, quickshell:searchToggleReleaseInterrupt # [hidden]
