--- a/dots/.config/hypr/hyprland/execs.conf
+++ b/dots/.config/hypr/hyprland/execs.conf
@@ -6,8 +6,12 @@ exec-once = ~/.config/hypr/custom/scripts/__restore_video_wallpaper.sh
 # Core components (authentication, lock screen, notification daemon)
 exec-once = gnome-keyring-daemon --start --components=secrets
 exec-once = hypridle
-exec-once = dbus-update-activation-environment --all
-exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
+#exec-once = dbus-update-activation-environment --all
+#exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
+exec-once = dbus-update-activation-environment --systemd --all
+exec-once = systemctl --user import-environment XDG_DATA_DIRS PATH XDG_CURRENT_DESKTOP WAYLAND_DISPLAY
+
+
 
 # Audio
 exec-once = easyeffects --hide-window --service-mode
