--- a/dots/.config/hypr/hyprland/execs.conf
+++ b/dots/.config/hypr/hyprland/execs.conf
@@ -8,9 +8,9 @@ exec-once = gnome-keyring-daemon --start --components=secrets
 exec-once = hypridle
 #exec-once = dbus-update-activation-environment --all
 #exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Some fix idk
-exec-once = dbus-update-activation-environment --systemd --all
-exec-once = systemctl --user import-environment XDG_DATA_DIRS PATH XDG_CURRENT_DESKTOP WAYLAND_DISPLAY
-
+#exec-once = dbus-update-activation-environment --systemd --all
+exec-once = sh -lc 'PID=$(pidof Hyprland | awk "{print \$1}"); XLINE=$(tr "\0" "\n" < /proc/$PID/environ | grep "^XDG_DATA_DIRS=" | head -n1); VAL=${XLINE#XDG_DATA_DIRS=}; systemctl --user set-environment "XDG_DATA_DIRS=$VAL"; dbus-update-activation-environment --systemd XDG_DATA_DIRS'
+#exec-once = systemctl --user import-environment XDG_DATA_DIRS PATH XDG_CURRENT_DESKTOP WAYLAND_DISPLAY
 
 
 # Audio
