fix: xdg environment

--- a/dots/.config/hypr/hyprland/execs.conf
+++ b/dots/.config/hypr/hyprland/execs.conf
@@ -15,21 +15,7 @@ exec-once = hypridle
 #exec-once = sh -lc 'PID=$(pidof Hyprland | awk "{print \$1}"); XLINE=$(tr "\0" "\n" < /proc/$PID/environ | grep "^XDG_DATA_DIRS=" | head -n1); VAL=${XLINE#XDG_DATA_DIRS=}; systemctl --user set-environment "XDG_DATA_DIRS=$VAL"; dbus-update-activation-environment --systemd XDG_DATA_DIRS'
 
 
-exec-once = sh -lc '
-  set -eux
-  PID=$(pidof Hyprland | awk "{print \$1}")
-  XLINE=$(tr "\0" "\n" < /proc/$PID/environ | grep "^XDG_DATA_DIRS=" | head -n1)
-  VAL=${XLINE#XDG_DATA_DIRS=}
-
-  echo "PID=$PID"
-  echo "XLINE=$XLINE"
-
-  /run/current-system/systemd/bin/systemctl --user set-environment "XDG_DATA_DIRS=$VAL"
-  export XDG_DATA_DIRS="$VAL"
-  /run/current-system/sw/bin/dbus-update-activation-environment --systemd XDG_DATA_DIRS
-
-  /run/current-system/systemd/bin/systemctl --user show-environment | grep "^XDG_DATA_DIRS="
-' > /tmp/hypr-xdg.log 2>&1
+exec-once = sh -lc 'PID=$(pidof Hyprland | awk "{print \$1}"); XLINE=$(tr "\0" "\n" < /proc/$PID/environ | grep "^XDG_DATA_DIRS=" | head -n1); VAL=${XLINE#XDG_DATA_DIRS=}; echo "PID=$PID"; echo "XLINE=$XLINE"; /run/current-system/systemd/bin/systemctl --user set-environment "XDG_DATA_DIRS=$VAL"; export XDG_DATA_DIRS="$VAL"; /run/current-system/sw/bin/dbus-update-activation-environment --systemd XDG_DATA_DIRS; /run/current-system/systemd/bin/systemctl --user show-environment | grep "^XDG_DATA_DIRS="; ' > /tmp/hypr-xdg.log 2>&1
 
 
 #exec-once = systemctl --user import-environment XDG_DATA_DIRS PATH XDG_CURRENT_DESKTOP WAYLAND_DISPLAY
