fix: xdg environment

--- a/dots/.config/hypr/hyprland.conf
+++ b/dots/.config/hypr/hyprland.conf
@@ -4,6 +4,9 @@
 exec = hyprctl dispatch submap global # DO NOT REMOVE THIS OR YOU WON'T BE ABLE TO USE ANY KEYBIND
 submap = global # This is required for catchall to work
 
+
+exec-once = /bin/sh -lc 'echo "exec-once from main ran at $(date)" > /tmp/exec-once-main-proof'
+
 # Environment variables
 source=hyprland/env.conf
 source=custom/env.conf
