--- a/dots/.config/hypr/hyprland/execs.conf
+++ b/dots/.config/hypr/hyprland/execs.conf
@@ -3,7 +3,7 @@
 exec-once = sh -lc 'date > /tmp/hypr-execs-conf-ran'
 
 exec-once = ~/.config/hypr/hyprland/scripts/start_geoclue_agent.sh
-exec-once = qs -c $qsConfig &
+exec-once = qs -c ii &
 exec-once = ~/.config/hypr/custom/scripts/__restore_video_wallpaper.sh
 
 # Core components (authentication, lock screen, notification daemon)
