fix: pass xgd from hyprland to quickshell

--- a/dots/.config/hypr/hyprland/execs.conf
+++ b/dots/.config/hypr/hyprland/execs.conf
@@ -3,7 +3,8 @@
 exec-once = sh -lc 'date > /tmp/hypr-execs-conf-ran'
 
 exec-once = ~/.config/hypr/hyprland/scripts/start_geoclue_agent.sh
-exec-once = qs -c ii &
+#exec-once = qs -c ii &
+exec-once = sh -lc 'X="$(tr "\0" "\n" < /proc/$(pidof Hyprland | awk "{print \$1}")/environ | sed -n "s/^XDG_DATA_DIRS=//p")"; env XDG_DATA_DIRS="$X" qs -c ii' &
 exec-once = ~/.config/hypr/custom/scripts/__restore_video_wallpaper.sh
 
 # Core components (authentication, lock screen, notification daemon)
